--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,14 @@ html, body{
     height: 300px;
     width: 300px;
 }
+
+#saludo{
+    color: blueviolet;
+    margin: 20px;
+    font-weight: bolder;
+    font-size: 20px;
+}
+
+footer{
+    margin: 50px;
+}
